syntax = "proto3";

// TODO:
// - rename this package to something like pbingest...

option go_package = "github.com/usefulco/oak-server/api/ingest";

import "provider/provider.proto";

service IngestService {
    rpc CreateIngest (CreateIngestRequest) returns (Ingest);
}

// Ingest object
message Ingest {
    string id = 1;
    Provider provider = 2;
    string type = 3;
    string name = 4;
    string description =5;
}

// CreateIngestRequest is a request object used to create an Ingest
message CreateIngestRequest {
    Provider provider = 1;
    string type = 2;
    string name = 3;
    string description = 4;
    string source_name = 5;
    string source_ip_addr = 6;
}

// GetIngestRequest is a request object used to retrieve an Ingests details
message GetIngestRequest {
    string id = 1;
}